# swag-cat

./: CNAME  Cargo.toml  README.md  index.html
src/: main.rs
templates/: index.html.tera
